--- a/HealthCareInfromationSystem.csproj
+++ b/HealthCareInfromationSystem.csproj
@@ -197,7 +197,9 @@
     <Compile Include="view\PatientView\PatientMainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="view\PatientView\PatientMainForm.Designer.cs" />
+    <Compile Include="view\PatientView\PatientMainForm.Designer.cs">
+      <DependentUpon>PatientMainForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\PatientView\PriorityAppointmentForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -288,7 +290,9 @@
       <DependentUpon>AnamnesisReviewForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\PatientView\AppointmentForm.resx" />
-    <EmbeddedResource Include="view\PatientView\PatientMainForm.resx" />
+    <EmbeddedResource Include="view\PatientView\PatientMainForm.resx">
+      <DependentUpon>PatientMainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\PatientView\PriorityAppointmentForm.resx" />
     <EmbeddedResource Include="view\PatientView\SearchDoctorForm.resx">
       <DependentUpon>SearchDoctorForm.cs</DependentUpon>
